revert some styles

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
   <script src="/dist/main.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+  <style>
+    ul {
+      list-style: revert;
+      list-style-position: inside;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      font-size: revert;
+    }
+  </style>
 </body>
 </html>
