complete course with build step

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
     h1, h2, h3, h4, h5, h6 {
       font-size: revert;
+      margin: 10px 0 !important;
+    }
+
+    pre {
+      margin: 10px 0 !important;
+    }
+
+    p {
+      margin: 10px 0;
     }
   </style>
 </body>
